--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,4 @@
-# python build
-build
-dist
-*.egg*
-
-# Ignore all logfiles and tempfiles.
-/log/*.log
-/log/*.yml
-/tmp
-
-# Ignore vim swap files
-*.swp
-*.swo
-
-#ignore mac os x .ds_store
-.DS_Store
-
-# for ctags
-.tags
-
-.env
-
-.vscode
+*.egg-info
+build/
+dist/
+var/
