Rename the Python package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = thumbor_multidir
+name = leukeleu-thumbor-multidir
 url = https://github.com/leukleu/leukeleu-thumbor-multidir
 author = Jaap Roes
 author_email = jroes@leukeleu.nl
